# brazilian-invoice-ai-agent

./: .env  .env.example  .gitignore  README.md  __init__.py  llama_deploy.yaml  pyproject.toml  schema.json
docs/: architecture.md  security.md  submission.md
docs/assets/screenshots/: README.md
examples/input/: README.md
examples/output/: out.json  output.full.json  output.sample.json
integration/: __init__.py
integration/laravel/: README.md  routes_example.php
integration/laravel/app/Console/Commands/: LlamaExtractInvoice.php
integration/laravel/app/Data/: InvoiceExtractDTO.php
integration/laravel/app/Http/Controllers/: InvoiceExtractController.php
integration/laravel/app/Http/Requests/: InvoiceExtractRequest.php
integration/laravel/app/Services/: LlamaExtractRunner.php
integration/laravel/app/Support/: InvoiceJsonNormalizer.php
integration/python/: README.md  extract_invoice.py  requirements.txt  sanitizer.py  smoke_test_deployment.py  test_sanitizer.py  workflow.py
